[package]
name = "satellite_wallpaper"
version = "1.0.1"
authors = ["Jia Ye <planet0104@gmail.com>"]
edition = "2021"

[dependencies]
image = "0.24.7"
anyhow = "1"
once_cell = "1.18.0"
tiny_http = "0.12.0"
toml = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.28", features = ["macros"] }
wallpaper = "3.2.0"
log = "0.4"
env_logger = "0.10.0"
dirs = "5.0.1"
serde_json = "1.0"
data-encoding = "2.4.0"
futures = "0.3.28"
minreq = { version="2.10.0", features=["https"]}
qrcode-rs = "0.1"
local_ipaddress = "0.1.3"
tray-icon = "0.9.0"
# winit = "0.29.1-beta"
tao = "0.22.2"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Storage",
    "System_UserProfile",
    "Foundation"
]

[build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[package.metadata.winres]
OriginalFilename = "satellite_wallpaper.exe"
ProductName = "卫星壁纸"
ProductVersion = "1.0.0"
LegalCopyright = "Copyright © 2021 planet2@qq.com"