[package]
name = "satellite_wallpaper"
version = "1.0.2"
authors = ["Jia Ye <planet0104@gmail.com>"]
edition = "2021"

[dependencies]
image = "0.24.7"
anyhow = "1"
once_cell = "1.18.0"
toml = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.28", features = ["macros"] }
wallpaper = "3.2.0"
log = "0.4"
env_logger = "0.10.0"
dirs = "5.0.1"
data-encoding = "2.4.0"
minreq = { version="2.10.0", features=["https"]}
tray-icon = "0.9.0"
tao = "0.22.2"
slint = "1.2.1"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Storage",
    "System_UserProfile",
    "Foundation"
]

[build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[package.metadata.winres]
OriginalFilename = "satellite_wallpaper.exe"
ProductName = "卫星壁纸"
ProductVersion = "1.0.2"
LegalCopyright = "Copyright © 2021 planet2@qq.com"